# arsenal

./: .gitignore  Object.cpp  Object.h  VERSION  meson.build  readme.md
docs/: class-hierarchy.md  dizdoc.md
src/: Denizen.cpp  Denizen.h  Engine.cpp  Engine.h  GameMath.cpp  GameMath.h  IAnimable.h  ITextureable.cpp  ITextureable.h  init.cpp  xui.cpp
src/Engine/: Engine.cpp  Engine.h
src/Engine/Base/: Camera.cpp  Camera.h  Denizen.cpp  Denizen.h  Directions.cpp  Directions.h  Object.cpp  Object.h  TheWorld.h
src/Engine/Filesystem/: Filesystem.cpp  Filesystem.h
src/Engine/Math/: GameMath.cpp  GameMath.h
subprojects/: sfml.wrap
texts/: example.txt
